WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293253
[iOS] Inconsistent space-items in the form accessory view
https://bugs.webkit.org/show_bug.cgi?id=293253
Summary
[iOS] Inconsistent space-items in the form accessory view
Aditya Keerthi
Reported
2025-05-19 15:01:02 PDT
rdar://151642086
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-05-19 15:06:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45614
EWS
Comment 2
2025-05-19 15:34:41 PDT
Committed
295130@main
(976c373898ad): <
https://commits.webkit.org/295130@main
> Reviewed commits have been landed. Closing PR #45614 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug