[iOS] Inconsistent space-items in the form accessory view https://bugs.webkit.org/show_bug.cgi?id=293253 rdar://151642086

Reviewed by Richard Robinson.

Apply consistent adjustment for all space-items.

* Source/WebKit/UIProcess/ios/forms/WKFormAccessoryView.mm:
(-[WKFormAccessoryView initWithInputAssistantItem:delegate:]):

Canonical link: https://commits.webkit.org/295130@main